--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
 						<h3>{{profession}}</h3>
 						<p>{{bio}}</p>
 						<center class="bottom">
-							<a class="button" href="javascript:history.back();" x="#frame-1">Exit</a>
+							<a class="button" href="javascript:history.back();">Exit</a>
 						</center>
 					</container>
 				</div>
 				<center class="bottom">
-					<a class="button" href="#frame-2">Go to f2</a>
-					<a class="button" href="#frame-3">Go to f3 <i class="fa fa-arrow-circle-right"></i></a>
+					<a class="button" href="#frame-2">Go to next frame <i class="fa fa-arrow-right"></i></a>
 				</center>
 			</div>
 			<script>
@@ -58,44 +57,54 @@
 						ul.innerHTML = '<div class="loading"></div>';
 						setTimeout(function(){
 							//	After a small time-out, we are querying for data. This is to demonstrate the loading indicator - you may remove the timeout
-							new ajax('assets/data.json',
-								{callback:
-									//	This is the function that runs after data is received
-									function(result){
-										data = eval('('+result.responseText+')');
-										ul.innerHTML = '';
-										for (var i = 0;i < data.length; i++){
-											var li = arcReact(data[i], schema);
-											li.setAttribute('data-id', i);
-											li.onclick = function(){
-												document.location.hash = 'frame-1/frame-1-1/'+this.getAttribute('data-id');
-											}
-											ul.appendChild(li);
+							loadData(
+								//	This is the function that runs after data is received
+								function(){
+									ul.innerHTML = '';
+									for (var i = 0;i < data.length; i++){
+										var li = arcReact(data[i], schema);
+										li.setAttribute('data-id', i);
+										li.onclick = function(){
+											document.location.hash = 'frame-1/frame-1-1/'+this.getAttribute('data-id');
 										}
+										ul.appendChild(li);
 									}
 								});
-						}, 400);
+						}, 300);
 					});
 				//
 				//	Another navigation point for the popup
 				new navFrame('frame-1/frame-1-1',
 					q('#frame-1-1')[0],
-					function(context, params){
+					function(context, params, event){
+						//console.log(event);
 						//context.q('.content')[0].innerHTML = params;
 						context.innerHTML = '';
-						if (typeof data[params[0]] == 'undefined')
-							context.innerHTML = 'Not Found';
-						else
-							context.appendChild(arcReact(data[params[0]], schema2));
+						loadData(
+							function(){
+								if (typeof data[params[0]] == 'undefined')
+									context.innerHTML = 'Not Found';
+								else
+									context.appendChild(arcReact(data[params[0]], schema2));
+							});
 					});
+				//
+				function loadData(cont){
+					new ajax('assets/data.json', {callback:
+						function(result){
+							data = eval('('+result.responseText+')');
+							cont();
+						}});
+				}
 			</script>
 
 			<div id="frame-2" class="frame fade slow">
 				<h1>Frame 2</h1>
 				<div class="loading"></div>
-				<a class="button" href="#frame-1">Go to f1</a>
-				<a class="button" href="#frame-1/frame-1-1/1/passed-by/a-url">Go to f2.1</a>
-				<a class="button" href="#frame-3">Go to f3</a>
+				<center class="bottom">
+					<a class="button" href="#frame-1"><i class="fa fa-arrow-left"></i> Go to previous frame</a>
+					<a class="button" href="#frame-3">Go to next frame <i class="fa fa-arrow-right"></i></a>
+				</center>
 			</div>
 			<script>
 				new navFrame('frame-2', q('#frame-2')[0]);
@@ -104,25 +113,49 @@
 			<div id="frame-3" class="frame fade slide-left slow">
 				<h1>Frame 3</h1>
 				<container>
-					<form method="post" class="autopilot">
+					<form method="post" name="form1" class="autopilot">
 						<div class="row">
 							<label>Your Email</label>
 							<input type="email" name="email" />
 						</div>
+
+						<div class="row"><h3>Alpha Only</h3></div>
 						<div class="row w-50">
 							<label>Your First Name</label>
-							<input type="text" name="firstname" />
+							<input type="text" name="firstname" data-validate="alpha" />
 						</div>
 						<div class="row w-50">
 							<label>Your Last Name</label>
-							<input type="text" name="lastname" />
+							<input type="text" name="lastname" data-validate="alpha" />
 						</div>
+
+						<div class="row"><h3>Masked Input</h3></div>
+						<div class="row w-50">
+							<label>Phone Number</label>
+							<input type="text" name="firstname" data-mask="(999)-999-9999" />
+						</div>
+						<div class="row w-50">
+							<label>Date of Birth</label>
+							<input type="text" name="lastname" data-mask="9999-99-99" />
+						</div>
+
+						<div class="row"><h3>Numeric and Currency</h3></div>
+						<div class="row w-50">
+							<label>Quantity</label>
+							<input type="text" name="lastname" data-validate="numeric" />
+						</div>
+						<div class="row w-50">
+							<label>Price</label>
+							<input type="text" name="lastname" data-validate="currency" />
+						</div>
+
+						<center>
+							<input type="submit" value="Submit" />
+						</center>
 					</form>
 				</container>
 				<center class="bottom">
-					<a class="button" href="#frame-1">Go to f1</a>
-					<a class="button" href="#frame-2">Go to f2</a>
-					<a class="button" href="#frame-2/frame-2-1/param2/passed-by/another-url">Go to f2.1</a>
+					<a class="button" href="#frame-2"><i class="fa fa-arrow-left"></i> Go to previous frame</a>
 				</center>
 			</div>
 			<script>
@@ -134,12 +167,15 @@
 					function(context){
 						//alert('This function runs on frame-3 unloading');
 					});
+				new autopilotForm(document.form1);
 			</script>
 
 		</div>
 		<script>
 			if (document.location.hash == '')
 				document.location.hash = '#frame-1';
+			else
+				window.onpopstate();
 		</script>
 	</body>
 </html>
